<resources>
    <string name="app_name">Math Ultra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="algebra">Algebra</string>
    <string name="discrete_mathematics">Discrete Mathematics</string>
    <string name="about">About</string>
    <string name="mathultra">MathUltra</string>
    <string name="for_students_by_students">For students by students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flame_math_description">MathUltra поможет студенту с решением любой задачи высшей математики! Особенностью приложения являет то, что оно предоставит вам полный ход решения, необходимый для понимая задачи</string>
    <string name="linal">Линейная Алгебра</string>
    <string name="linal_description">Матрицы, определители, слау, жордановы формы</string>
    <string name="discr_math">Дискретная Математика</string>
    <string name="disrc_math_description">Скнф, сднф, полином жегалкина</string>
    <string name="history">История запросов</string>
    <string name="history_description">Повтори прорешанное</string>
    <string name="lexeme">Значение функции в точках</string>
    <string name="lexeme_description">Посчитать значение в одной или нескольких точках</string>
    <string name="lexeme_english">Lexeme</string>
    <string name="compute">COMPUTE</string>
    <string name="settings">Settings</string>
    <string name="algebra_description"> Практика по линейной алгебре. В этом разделе вы можете работать с базовыми операциями над матрицами: умножение, определитель, обратная, ранг. Так же можете искать жорданову форму и жорданов базис. При решении вы можете выбрать способ, решение которым хотите увидеть. Так же вы можете задать способ по умолчанию в настройках</string>
    <string name="mult">Умножить</string>
    <string name="slau">СЛАУ</string>
    <string name="mult_matrix">Умножить матрицы</string>
    <string name="ok">OK</string>
    <string name="x">x</string>
    <string name="enter_matrix_size">Введите размер матрицы</string>

</resources>