<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_lexeme"
            android:icon="@drawable/ic_square_root_x"
            android:title="@string/lexeme_english" />

        <item
            android:id="@+id/nav_algebra"
            android:icon="@drawable/ic_maths_add_minus"
            android:title="@string/algebra" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_question"
            android:title="@string/about" />
    </group>
</menu>