<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flamemathnew.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_algebra"
        android:name="com.example.flamemathnew.ui.algebra.AlgebraFragment"
        android:label="@string/algebra"
        tools:layout="@layout/fragment_algebra" />

    <fragment
        android:id="@+id/nav_discrete"
        android:name="com.example.flamemathnew.ui.discrete.DiscreteFragment"
        android:label="@string/discrete_mathematics"
        tools:layout="@layout/fragment_discrete" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.flamemathnew.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>